[project]
name = "strava-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "riccardo-borgo",email = "riccardo.borgo00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "ollama (>=0.6.1,<0.7.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain-core (>=1.1.0,<2.0.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
